_app/assets/_scss/_user.scss
//
// User styles
// -----------------------------------------------------------------------------
// NOTE: the following user styles are designed for default theme Curtana

// EXAMPLE: alternative title size
// By default all heading levels have the same font size, but many people may
// not like this, so here's an alternative font size stack:
.content {
  h2 {
    font-size: 240%;
    font-weight: bold;
    opacity: 1;

    @media (max-width: $breakpoint-sm) {
      // Override viewport units defined in post.html
      font-size: 187%; // 240/(360/180)
      margin-top: 1em;
    }
  }
  h3 {
    font-size: 120%;
    font-weight: bold;
    opacity: 1;

    @media (max-width: $breakpoint-sm) {
      // Override viewport units defined in post.html
      font-size: 100%;
      margin-top: 1em;
    }
  }
  h4,
  h5,
  h6 {
    font-size: 100%;
    font-weight: bold;
    opacity: 1;

    @media (max-width: $breakpoint-sm) {
      // Override viewport units defined in post.html
      margin-top: 1em;
    }
  }
}

// EXAMPLE: alternative post title color
// This is useful when you're using the custom color scheme.
.content {
  a {
    color: var(--link-color);
  }
}
.external span {
  background: var(--link-color);
}

// EXAMPLE: Custom typography for Chinese Traditional
// :root {
//   --fontstack-sans-serif: "Helvetica Neue", "Hiragino Sans GB", Arial, sans-serif;
//   --fontstack-serif: Georgia, "Hiragino Mincho ProN", serif;
// }

// EXAMPLE: amsf.github.io custom appearance
:root {
  --link-color-h: 199;
  --link-color-s: 100%;
  --link-color-l: 35%;
  --code-color-h: calc(var(--link-color-h) + 10);
  --code-color-s: calc(var(--link-color-s) * 0.2 + 40%);
  --grid-columns: 3;
  --nav-item-space: 2em;
  --line-height: calc(20 / 15);
}

.list {
  .title {
    @media (max-width: $breakpoint-sm) {
      overflow-wrap: break-word;
    }
  }

  ul {
    list-style-type: none;
    margin-left: 0;

    li::before {
      content: "";
    }

    small {
      display: block;
      margin-top: 1.2vmin;
      line-height: 1.5;

      @media (max-width: $breakpoint-sm) {
        margin-bottom: 2em;
      }
    }
  }
}

.content {
  margin-bottom: 6rem;

  @media (max-width: $breakpoint-sm) {
    margin-bottom: 1em;
  }

  .sub-title {
    font-size: 108%;
    opacity: 0.8;
  }
}

small {
  display: block;
  margin-top: 0.5em;

  &:last-of-type {
    margin-bottom: 2em;

    @media (max-width: $breakpoint-sm) {
      margin-bottom: 1em;
    }
  }
}

.navigation {
  --space-header: var(--space-lg);
  margin-bottom: 6rem;
  background: var(--text-color-3);
  @include padding-offset(var(--space-header));
  @include margin-offset(calc(var(--space-header) * -1));

  @media (max-width: $breakpoint-md) {
    --header-height: 52.5vh;
    --space-header: var(--space-md);
  }

  @media (max-width: $breakpoint-sm) {
    --nav-item-space: 1em;
    --space-header: var(--space-sm);
    margin-bottom: 1rem;
  }

  li {
    a {
      padding: 0.5em var(--nav-item-space) 0.5em 0em;
    }
  }
}

.footer {
  --space-header: var(--space-lg);
  background: var(--text-color-3);
  text-align: left;
  text-transform: none;
  padding: calc(2em + var(--nav-padding));
  @include padding-offset(var(--space-header));
  @include margin-offset(calc(var(--space-header) * -1));

  @media (max-width: $breakpoint-md) {
    --header-height: 52.5vh;
    --space-header: var(--space-md);
  }

  @media (max-width: $breakpoint-sm) {
    --nav-item-space: 1em;
    --space-header: var(--space-sm);
  }

  ul {
    li {
      a {
        color: var(--link-color);
        font-weight: bold;
        padding: 0.5em var(--nav-item-space) 0.5em 0em;
      }
    }
  }

  .links {
    padding: 0.5em;
    padding-left: 0em;
  }
}

header {
  .profile-header {
    margin-bottom: 0em;
  }

  .profile-title {
    display: inline-block;
    vertical-align: center;
    // max-width: 100%;
  }

  .profile-img {
    display: inline-block;
    max-width: 7em;
    height: auto;
    margin: 0 1em 0 0;
    border-radius: 50%;
  }

  @media (max-width: $breakpoint-sm) {
    margin-top: 0em;
  }
}

.grid-container {
  display: grid;
  grid-column-gap: 2em;
  grid-template-columns: repeat(var(--grid-columns), 1fr);
  margin: 1.8rem 0;
  padding: 0;
  list-style: none;

  @media (max-width: $breakpoint-sm) {
    grid-template-columns: repeat(calc(var(--grid-columns) - 1), 1fr);
  }
}

.grid-item {
  padding: 0.6em 0;
}

svg {
  /* Place the icon on the text baseline. */
  position: relative;
  top: 0.125em;

  /* Prevent the icon from shrinking inside a flex container. */
  flex-shrink: 0;

  /* Scale the icon to match the font-size. */
  height: 1em;
  width: 1em;

  /* Let the icon take whatever color the parent has. */
  fill: currentColor;

  /*
     * If the icon is used on a link, which has a color transition,
     * we can also transition the fill.
    */
  transition: fill 0.3s;
}

.content {
  .giscus-frame {
    max-width: 100%;
    margin-top: 2em;
    margin-left: 0em;
    margin-right: 0em;
  }

  .description {
    padding: 0em;
  }

  .contribution {
    padding: 1em;
    padding-left: 0em;
  }
}

#linkslist {
  display: inline;
  list-style: none;
  margin-left: 0em;
  overflow-wrap: break-word;

  li {
    display: inline;
    content: "";

    &::before {
      content: "";
    }

    &::after {
      content: "";
      margin-right: 1em;
    }

    &:last-child {
      &::after {
        content: "";
        margin-right: 0em;
      }
    }
  }
}

.linksbib-div {
  max-width: fit-content;
  margin-inline: auto;

  @media (max-width: $breakpoint-sm) {
    margin-inline: unset;
  }
}

#linksbib {
  display: inline;
  list-style: none;
  margin-left: 0em;

  li {
    display: inline;
    content: "";

    &::before {
      content: "";
    }

    &::after {
      content: "";
      margin-right: 0.5em;
    }

    &:last-child {
      &::after {
        content: "";
        margin-right: 0em;
      }
    }
  }
}

.post-nav {
  display: flex;
  justify-content: space-between;
  flex-wrap: wrap;
  margin-top: 1em;
  margin-bottom: 3em;

  div {
    flex: 1 1 0;

    &:first-child {
      padding-right: 0.5em;
    }

    &:last-child {
      padding-left: 0.5em;
      text-align: right;
    }
  }
}

.no-heading2 {
  margin: 2em 0 0;

  @media (max-width: $breakpoint-sm) {
    margin: 1em 0 0;
  }
}

